# practice

./: .gitignore  README.md
ch_01/: README.md  package.json  tsconfig.json
cpp/: append.c  output.txt  print_to_100.c
docker/: README.md
ex-sqlite/: README.md
firebase/: README.md  index.html
go-stuff/: .gitignore
grid/: README.md  ex-1.html  index.html
k8s/: nginx-service
kafka/: docker-compose.yml
mono/multi-tenant-app/backend/: .gitignore  CLAUDE.md  README.md  pyproject.toml
mono/multi-tenant-app/backend/alembic/: env.py
mono/multi-tenant-app/backend/alembic/versions/: 25d2279de422_create_tenant_user_todo_tables.py
mono/multi-tenant-app/backend/src/: main.py
mono/multi-tenant-app/backend/src/core/: auth.py  config.py  database.py
mono/multi-tenant-app/backend/src/models/: __init__.py  tenant.py  todo.py  user.py
mono/multi-tenant-app/backend/src/repositories/: __init__.py  tenant_repository.py  todo_repository.py
mono/multi-tenant-app/backend/src/schemas/: __init__.py  tenant.py  todo.py  user.py
nodejs/: 11052022075638_111013529R2.dbf  package.json
python/: .gitignore  Classification_Heart_DataSet_BITS_PA_S2_22_040222_1643947649387.ipynb  PA_Assignment_Chetan.ipynb  README.md  assign_1-Copy4.ipynb  assign_1.ipynb  assignment.ipynb  bank_statement.ipynb  cas_parser.ipynb  classification.ipynb  housing_1.ipynb  pandas.ipynb  sample-code-1.ipynb  sentiment_analysis.ipynb  speech-recognition.ipynb  titanic.ipynb  tweets.ipynb  whisper-speech.ipynb
remix/: .gitignore
remix-mongoose/: package-lock.json  package.json
(+362 files in other folders)
